# midgaurdapi

./: Cargo.toml  Readme.md  bankai.rs  data.json  test.txt
src/: main.rs
src/controllers/: routes.rs
src/database/: db.rs
src/docs/: mod.rs
src/middleware/: middleware.rs
src/models/: depth_price_history.rs  earnings_history.rs  earnings_history_pools.rs  mod.rs  runepool_members_units_history.rs  swaps_history.rs
src/routes/: depth_history_routes.rs  earning_history_route.rs  mod.rs  queries.rs  rune_pool_history_route.rs  swaps_history_routes.rs
src/services/: db.rs  fetchDepthPriceHistory.rs  fetch_depth_price_history.rs  fetch_earnings_history.rs  fetch_runepool_members_units_history.rs  fetch_swaps_history.rs  mod.rs  scheduler.rs
src/utils/: mod.rs
