[package]
name = "midgaurd"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.8.0", features = ["tokio-runtime"] }
dotenv = "0.15.0"
actix-web = "4.4"
chrono = "0.4"
futures-util = "0.3.28"
log = "0.4"
env_logger = "0.10.0"
serde_urlencoded = "0.7"
cron = "0.12.1"
utoipa = { version = "4.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }